core/networkpolicies/coredns/coredns.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: core-dns
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9153"
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"  # kube api
    - toCIDRSet:
        - cidr: ${DNS_IP}/32
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
