core/networkpolicies/coredns/ingress-coredns.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-coredns
  namespace: kube-system
spec:
  selector: k8s-app == 'kube-dns'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 53
    - action: Allow
      protocol: UDP
      destination:
        ports:
          - 53
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'monitoring'
        selector: app.kubernetes.io/instance == 'kube-prometheus-stack-prometheus'
      destination:
        ports:
          - 9153
